friscasm.js
var frisc_asm = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "absaddr_mem": parse_absaddr_mem,
        "aluop": parse_aluop,
        "aluop_name": parse_aluop_name,
        "base": parse_base,
        "baseop": parse_baseop,
        "baseop_name": parse_baseop_name,
        "cmpop": parse_cmpop,
        "cmpop_name": parse_cmpop_name,
        "commentPart": parse_commentPart,
        "delimiter": parse_delimiter,
        "dsop": parse_dsop,
        "dsop_name": parse_dsop_name,
        "dwhbop": parse_dwhbop,
        "dwhbop_name": parse_dwhbop_name,
        "dwop": parse_dwop,
        "dwop_name": parse_dwop_name,
        "endop": parse_endop,
        "endop_name": parse_endop_name,
        "equop": parse_equop,
        "equop_name": parse_equop_name,
        "flag": parse_flag,
        "flag_name": parse_flag_name,
        "immaddr": parse_immaddr,
        "instruction": parse_instruction,
        "instruction_end": parse_instruction_end,
        "instruction_or_end": parse_instruction_or_end,
        "instructions": parse_instructions,
        "jmpop_name": parse_jmpop_name,
        "label": parse_label,
        "memop": parse_memop,
        "memop_name": parse_memop_name,
        "moveop": parse_moveop,
        "moveop_name": parse_moveop_name,
        "newline": parse_newline,
        "nonjmpop_name": parse_nonjmpop_name,
        "number": parse_number,
        "numberWithoutBase": parse_numberWithoutBase,
        "operation": parse_operation,
        "operationPart": parse_operationPart,
        "orgop": parse_orgop,
        "orgop_name": parse_orgop_name,
        "regaddr": parse_regaddr,
        "register": parse_register,
        "rinaddr": parse_rinaddr,
        "rinaddroff": parse_rinaddroff,
        "sraddr": parse_sraddr,
        "stackop": parse_stackop,
        "stackop_name": parse_stackop_name,
        "uprop": parse_uprop,
        "whitespace": parse_whitespace
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "instructions";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_instructions() {
        var cacheKey = 'instructions@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1, pos2, pos3;
        
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_instruction_or_end();
        if (result0 !== null) {
          result1 = [];
          pos2 = pos;
          result2 = parse_newline();
          if (result2 !== null) {
            result3 = (function() {linecounter++; return true;})() ? '' : null;
            if (result3 !== null) {
              result4 = parse_instruction_or_end();
              if (result4 !== null) {
                result2 = [result2, result3, result4];
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
          } else {
            result2 = null;
            pos = pos2;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = pos;
            result2 = parse_newline();
            if (result2 !== null) {
              result3 = (function() {linecounter++; return true;})() ? '' : null;
              if (result3 !== null) {
                result4 = parse_instruction_or_end();
                if (result4 !== null) {
                  result2 = [result2, result3, result4];
                } else {
                  result2 = null;
                  pos = pos2;
                }
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(i1, i2) {
              var instrs = [];
              var machinecode = [];
              var unknownlabels = [];
          
              if (typeof i1.op !== "undefined" && i1.op !== "") {
                instrs.push(i1);
              }
              
              for (var i=0; i<i2.length; i++) {
                if (typeof i2[i][2].op !== "undefined" && i2[i][2].op !== "") {
                  instrs.push(i2[i][2]);
                }
              }
          
              function replaceLabel(element) {
                if (element.type === "label") {
                  var labelValue = labels[element.value];
          
                  if (typeof labelValue !== "undefined") {
                    element.type = "num";
                    element.value = labelValue;
                  } else {
                    unknownlabels.push(element.value);
                    element.value = null;
                  }
                }
              }
              
              // replace labels
              for (var i=0; i<instrs.length; i++) {
                if (instrs[i].op in aluops || instrs[i].op in cmpops || instrs[i].op in moveops) {
                  replaceLabel(instrs[i].alusrc2);
                } else if (instrs[i].op in jmpops) {
                  replaceLabel(instrs[i].addr);
                } else if (instrs[i].op in memops) {
                  replaceLabel(instrs[i].mem);
                } else if (instrs[i].op in dwhbops) {
                  var vals = [];
                  
                  for (var j=0; j<instrs[i].values.length; j++) {
                    replaceLabel(instrs[i].values[j]);
                    vals.push(instrs[i].values[j].value);
                  }
          
                  instrs[i].values = vals;
                }
              }
              
              // check if all labels are defined
              if (unknownlabels.length > 0) {
                throw new Error("Unknown labels:" + unknownlabels.toString());
              }
             
              // generate machine code
              for (var i=0; i<instrs.length; i++) {
                generateMachineCode(instrs[i]);
                machinecode.push(instrs[i]);
              }
          
              // generate memory model
              var mem = [];
          
              var writeToMemory = function(bitString, startPosition, memoryArray) {
                if (bitString.length % 8 !== 0) {
                  throw new Error("Memory string has wrong length");
                }
          
                var elems = bitString.match(/.{8}/g);
          
                for (var i=0; i<elems.length; i++) {
                  memoryArray[startPosition+i] = elems[elems.length - i - 1];
                }
                
                return startPosition + elems.length;
              };
           
              for (var opCount=0, memCount=0; opCount<machinecode.length; ) {
                if (typeof machinecode[opCount].curloc === "undefined") {
                  opCount++;
                } else {
                  if (machinecode[opCount].curloc !== memCount) {
                    memCount = writeToMemory("00000000", memCount, mem);
                  } else {
                    if (typeof machinecode[opCount].machineCode === "string") {
                      memCount = writeToMemory(machinecode[opCount].machineCode, memCount, mem);
                    } else {
                      for (var j=0; j<machinecode[opCount].machineCode.length; j++) {
                        memCount = writeToMemory(machinecode[opCount].machineCode[j], memCount, mem);
                      }
                    }
                    opCount += 1;
                  }
                }
              }
             
              return { ast : machinecode, mem : mem};
            })(result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_newline() {
        var cacheKey = 'newline@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0;
        var pos0;
        
        
        if (input.substr(pos, 1) === "\n") {
          result0 = "\n";
          pos += 1;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"\\n\"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos, 2) === "\r\n") {
            result0 = "\r\n";
            pos += 2;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"\\r\\n\"");
            }
          }
          if (result0 === null) {
            if (input.substr(pos, 1) === "\r") {
              result0 = "\r";
              pos += 1;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"\\r\"");
              }
            }
            if (result0 === null) {
              if (input.substr(pos, 2) === "\n\r") {
                result0 = "\n\r";
                pos += 2;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"\\n\\r\"");
                }
              }
              
            }
          }
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_instruction_or_end() {
        var cacheKey = 'instruction_or_end@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0;
        var pos0, pos1;
        
        
        pos0 = pos;
        result0 = parse_instruction_end();
        if (result0 !== null) {
          result0 = (function(i) { var ins = i; ins.line = linecounter-1; return {}})(result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          result0 = parse_instruction();
          if (result0 !== null) {
            result0 = (function(i) { var ins = i; ins.line = linecounter; return ins;})(result0);
          }
          if (result0 === null) {
            pos = pos0;
          }
          
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_instruction_end() {
        var cacheKey = 'instruction_end@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3, result4, result5, result6, result7, result8;
        var pos0, pos1, pos2, pos3;
        
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_label();
        result0 = result0 !== null ? result0 : '';
        if (result0 !== null) {
          result2 = parse_whitespace();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_whitespace();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result2 = parse_endop();
            if (result2 !== null) {
              result3 = parse_commentPart();
              result3 = result3 !== null ? result3 : '';
              if (result3 !== null) {
                pos2 = pos;
                result4 = parse_newline();
                if (result4 !== null) {
                  result5 = [];
                  if (input.length > pos) {
                    result6 = input.charAt(pos);
                    pos++;
                  } else {
                    result6 = null;
                    if (reportFailures === 0) {
                      matchFailed('any character');
                    }
                  }
                  while (result6 !== null) {
                    result5.push(result6);
                    if (input.length > pos) {
                      result6 = input.charAt(pos);
                      pos++;
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed('any character');
                      }
                    }
                  }
                  if (result5 !== null) {
                    result4 = [result4, result5];
                  } else {
                    result4 = null;
                    pos = pos2;
                  }
                } else {
                  result4 = null;
                  pos = pos2;
                }
                result4 = result4 !== null ? result4 : '';
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(l, o, c) {
                return o;
              })(result0[0], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_instruction() {
        var cacheKey = 'instruction@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_label();
        result0 = result0 !== null ? result0 : '';
        if (result0 !== null) {
          result1 = parse_operationPart();
          result1 = result1 !== null ? result1 : '';
          if (result1 !== null) {
            result2 = parse_commentPart();
            result2 = result2 !== null ? result2 : '';
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(l, o, c) {
              if (o === "") {
                return {};
              }
          
              if (!(o.op in dwops || o.op in equops || o.op in endops)) {
                curloc = curloc % 4 === 0 ? curloc : curloc + (4-curloc%4);
              }
              
              if (l !== "") {
                if (!(o.op in baseops || o.op in endops || o.op in orgops || o.op in equops)) {
                  labels[l] = curloc;
                } else if (o.op in equops) {
                  labels[l] = o.value;
                }
              }
              
              o.curloc = curloc;
              
              if (o.op in aluops || o.op in cmpops || o.op in moveops || o.op in jmpops || o.op in rethaltops || o.op in memops) {
                curloc += 4;
              } else if (o.op in orgops) {
                curloc = o.value;
              } else if (o.op in dwops) {
                curloc += o.values.length;
              } else if (o.op in equops) {
                curloc = curloc;
              } else if (o.op in endops) {
                curloc = curloc;
              } else if (o.op in dsops) {
                curloc += o.value;
              } else if (o.op in dwhbops) {   
                curloc += o.size*o.values.length;
              }
          
              if (o.op in baseops) {
                defaultBase = o.value;
              }    
          
              if (o.op in endops || o.op in equops || o.op in orgops || o.op in baseops) {
                return {};
              } else {
                return o;
              }
            })(result0[0], result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_label() {
        var cacheKey = 'label@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0, result1, result2, result3;
        var pos0, pos1, pos2, pos3;
        
        
        pos0 = pos;
        pos1 = pos;
        pos2 = pos;
        reportFailures++;
        if (input.substr(pos).match(/^[a-zA-Z]/) !== null) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[a-zA-Z]");
          }
        }
        reportFailures--;
        if (result0 !== null) {
          result0 = '';
          pos = pos2;
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result1 = [];
          if (input.substr(pos).match(/^[0-9A-z]/) !== null) {
            result2 = input.charAt(pos);
            pos++;
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("[0-9A-z]");
            }
          }
          while (result2 !== null) {
            result1.push(result2);
            if (input.substr(pos).match(/^[0-9A-z]/) !== null) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[0-9A-z]");
              }
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(l) {
              return l.join("");
            })(result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_operationPart() {
        var cacheKey = 'operationPart@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var result0, result1, result2;
        var pos0, pos1, pos2;
        
        
        pos0 = pos;
        pos1 = pos;
        result1 = parse_whitespace();
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_whitespace();
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result1 = parse_operation();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
